# tdf_simulator

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
notebooks/: example.ipynb  example_random.ipynb
scripts/: check_coverage.bash
tdf_simulator/: config.py  converters.py  frames.py  main.py  random.py  simulator.py  tdf_sql.py  transition_factory.py  transition_simulator.py  utils.py
tests/: test_converters.py  test_transition_simulator.py
tests/data/: settings.toml  transitions.json
