[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tdf_simulator"
version = "0.0.1"
description = "A simulator for TDF files."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "Apache 2.0" }
authors = [{ name = "Sebastian Paez", email = "jspaezp@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy >= 2.0.0",
    "pandas",
    "pyzstd",
    "tqdm",
    "loguru",
    "uniplot",
    "tomli-w",
    "tomli",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
viz = ["ipykernel", "timsrust_pyo3", "matplotlib"]


[tool.ruff.lint]
# Enable pycodestyle ('E'), Pyflakes ('F'), isort ('I'), and more
select = [
    "E",
    "F",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "C4",
    "T20",
    "PT",
    "Q",
]
ignore = [
    "ANN101", # Missing annotation for self in method
    "ANN102", # Missing annotation for cls in class method
    "D100",   # Missing docstring in public module
    "ANN204", # Missing return type annotation for special method `__init__`
    "D107",   # Missing docstring in __init__
    "D105",   # Missing docstring in magic method
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "D104", #  Missing docstring in public package
]
"tests/*.py" = [
    "S101",   # Use of `assert` detected
    "T201",   # `print` found
    "D103",   # Missing docstring
    "ANN201", # Missing return type
]

[tool.ruff.lint.isort]
known-first-party = ["tdf_simulator"]
